Added SPDX headers. Sonarcloud fix
Signed-off-by: Pascal Wilbrink <pascal.wilbrink@alliander.com>